# betty

./: .gitignore  Cargo.toml  README.md  new-syntax
src/: main.rs
src/lang/: builtin_functions.rs  builtin_functions_names.rs  error.rs  interpreter.rs  lexer.rs  mod.rs  namespace.rs  node.rs  object.rs  parser.rs  run.rs  token.rs  typ.rs  type_alias.rs
